--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,17 +6,23 @@ click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cssselect2==0.4.1
 Django==3.2.9
 django-cleanup==5.2.0
 django-redis==5.1.0
-easy-thumbnails==2.7.1
+easy-thumbnails==2.8
 kombu==5.2.2
+lxml==4.7.1
 Pillow==8.3.2
 prompt-toolkit==3.0.24
 psycopg2-binary==2.9.1
 pytz==2021.3
 redis==3.5.3
+reportlab==3.6.5
 six==1.16.0
 sqlparse==0.4.2
+svglib==1.1.0
+tinycss2==1.1.1
 vine==5.0.0
 wcwidth==0.2.5
+webencodings==0.5.1
