--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,8 @@ amqp==5.0.6
 asgiref==3.4.1
 billiard==3.6.4.0
 celery==5.2.1
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
 click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -11,6 +13,7 @@ Django==3.2.9
 django-cleanup==5.2.0
 django-redis==5.1.0
 easy-thumbnails==2.8
+idna==3.3
 kombu==5.2.2
 lxml==4.7.1
 Pillow==8.3.2
@@ -19,10 +22,12 @@ psycopg2-binary==2.9.1
 pytz==2021.3
 redis==3.5.3
 reportlab==3.6.5
+requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
 svglib==1.1.0
 tinycss2==1.1.1
+urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
 webencodings==0.5.1
